chande logic callbacks