@@ -7,6 +7,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,8 +30,13 @@ public class ProbegService {
     }
 
     @Transactional
-    public void changeMonday(List<Integer> kilometers) {
-        getAll().get(0).setKilometers(kilometers.get(0));
+    public String changeMonday(List<Integer> kilometers) {
+        int km1 = kilometers.getFirst();
+        getAll().getFirst().setKilometers(km1);
+        String listReport = getAll().stream()
+                .map(e -> e.getId() + "id/row: " + e.getRowNumber() + ": " + e.getKilometers() + " km.")
+                .collect(Collectors.joining("\n"));
+        return "Monday: " + km1 + " km.\n" + listReport;
     }
 
     public List<ReportEntry> getAll() {
